# INT4-KV-Cache-Quantization-with-Fused-Flash-Attention-CUDA-Kernels-for-LLM-Serving

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench_flash_decode.py
csrc/: bindings.cpp  flash_decode_int4.cu
docs/: ARCHITECTURE.md
results/: latency_bench.json  perplexity_simulation.json
scripts/: validate_llama.py
src/: __init__.py  _jit.py  flash_decode_ref.py  int4_pack.py  ops.py  quantize_int4_ref.py  quantize_int4_triton.py  vllm_integration.py
tests/: __init__.py  test_correctness.py  test_flash_decode.py  test_int4_pack.py  test_ops_dispatch.py  test_quantization.py  test_triton_quantize.py  test_vllm_integration.py
